varken/varken-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: varken
  namespace: default
spec:
  rules:
  - host: varken.lan
    http:
      paths:
      - backend:
          service:
            name: varken-grafana
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
